Update Synthetic Data Generation.ipynb

--- a/model building/Synthetic Data Generation.ipynb
+++ b/model building/Synthetic Data Generation.ipynb
@@ -1876,7 +1876,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to generate synthetic data that respects both the categorization of the percentiles and the correlations between the variables, hence we will follow a Copula-based approach. Copulas are statistical constructs that allow modeling the dependency structure (correlations) separately from the marginal distributions of each variable (which can be modeled using percentiles). They can capture a wide range of complex dependency structures and are particularly useful when dealing with multivariate data where the dependency between the variables is complex."
+    "We want to generate synthetic data that respects both the categorization of the percentiles and the correlations between the variables, hence we will follow a Copula-based approach. Copulas are statistical constructs that allow modeling the dependency structure (correlations) separately from the marginal distributions of each variable (which can be modeled using percentiles). They can capture a wide range of complex dependency structures and are particularly useful when dealing with multivariate data where the dependency between the variables is complex. By sampling from the copula, we are generating data that follows the same joint distribution as the original data, meaning that we respect the joint distribution of the original data"
    ]
   },
   {
@@ -2615,6 +2615,15 @@
    ],
    "source": [
     "synthetic_data_inverse_transformed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "synthetic_data_inverse_transformed.to_csv('synthetic_data.csv', index=False)"
    ]
   }
  ],
